# statik

./: .envrc  .gitignore  CHANGELOG.md  README.md  pyproject.toml
statik/: __init__.py  markdown_exts.py
