[project]
name = "statik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
    "argh>=0.31.3",
    "colorlog>=6.9.0",
    "httpwatcher>=0.5.2",
    "jinja2>=3.1.5",
    "lipsum>=0.1.2",
    "markdown>=3.7",
    "markupsafe>=3.0.2",
    "mlalchemy>=0.2.2",
    "mock>=5.1.0",
    "paramiko>=3.5.0",
    "pathtools>=0.1.2",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.3",
    "pystache>=0.6.7",
    "python-dateutil>=2.9.0.post0",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "setuptools>=75.6.0",
    "sqlalchemy>=2.0.36",
    "twine>=6.0.1",
    "unidecode>=1.3.8",
    "watchdog>=6.0.0",
    "wheel>=0.45.1",
]

[tool.uv]
package = true

[project.scripts]
statik='statik.cmdline:main'

